fixed blog template spacing

--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -8,7 +8,7 @@
 
 .title-container{
   max-width: 650px;
-  margin: 5rem auto 0 auto;
+  margin: 8rem auto 0 auto;
 }
 
 .title{
